--- a/deploy/manifests/serviceaccount.yaml
+++ b/deploy/manifests/serviceaccount.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/name: trino-operator
     app.kubernetes.io/instance: trino-operator
-    app.kubernetes.io/version: "0.3.2-nightly"
+    app.kubernetes.io/version: "0.3.2"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 # This cluster role binding allows anyone in the "manager" group to read secrets in any namespace.
@@ -16,7 +16,7 @@ metadata:
   labels:
     app.kubernetes.io/name: trino-operator
     app.kubernetes.io/instance: trino-operator
-    app.kubernetes.io/version: "0.3.2-nightly"
+    app.kubernetes.io/version: "0.3.2"
 subjects:
   - kind: ServiceAccount
     name: trino-operator-serviceaccount
