--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,6 +1,6 @@
 name: trino
-version: "0.4"
+version: "nightly"
 title: Stackable Operator for Trino
 nav:
   - modules/ROOT/nav.adoc
-prerelease: false
+prerelease: true
