--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -39,10 +39,10 @@ spec:
                               description: SecretReference represents a Secret Reference. It has enough information to retrieve secret in any namespace
                               properties:
                                 name:
-                                  description: Name is unique within a namespace to reference a secret resource.
+                                  description: name is unique within a namespace to reference a secret resource.
                                   type: string
                                 namespace:
-                                  description: Namespace defines the space within which the secret name must be unique.
+                                  description: namespace defines the space within which the secret name must be unique.
                                   type: string
                               type: object
                           required:
