--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -11,9 +11,14 @@ dimensions:
     values:
       - 0.37.2-stackable0.2.0
       - 0.41.0-stackable0.1.0
+  - name: s3-use-tls
+    values:
+      # - "true" Not supported yet
+      - "false"
 tests:
   - name: smoke
     dimensions:
       - trino
       - hive
       - opa
+      - s3-use-tls
