--- a/deploy/crd/trinocluster.crd.yaml
+++ b/deploy/crd/trinocluster.crd.yaml
@@ -33,6 +33,45 @@ spec:
                       properties:
                         multiUser:
                           properties:
+                            tls:
+                              nullable: true
+                              properties:
+                                verification:
+                                  description: The verification method used to verify the certificates of the server and/or the client
+                                  oneOf:
+                                    - required:
+                                        - none
+                                    - required:
+                                        - server
+                                  properties:
+                                    none:
+                                      description: "Use TLS but don't verify certificates"
+                                      type: object
+                                    server:
+                                      description: Use TLS and ca certificate to verify the server
+                                      properties:
+                                        caCert:
+                                          description: Ca cert to verify the server
+                                          oneOf:
+                                            - required:
+                                                - webPki
+                                            - required:
+                                                - secretClass
+                                          properties:
+                                            secretClass:
+                                              description: "Name of the SecretClass which will provide the ca cert. Note that a SecretClass does not need to have a key but can also work with just a ca cert. So if you got provided with a ca cert but don't have access to the key you can still use this method."
+                                              type: string
+                                            webPki:
+                                              description: Use TLS and the ca certificates trusted by the common web browsers to verify the server. This can be useful when you e.g. use public AWS S3 or other public available services.
+                                              type: object
+                                          type: object
+                                      required:
+                                        - caCert
+                                      type: object
+                                  type: object
+                              required:
+                                - verification
+                              type: object
                             userCredentialsSecret:
                               description: SecretReference represents a Secret Reference. It has enough information to retrieve secret in any namespace
                               properties:
